--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\August\\anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\Marten\\Anaconda\\python.exe"
 }
